going through requirements

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         </div>
         <br>
         <div>
-            <h2>Vincent Bedard</h2>
+            <h2 id="nameTitle">Vincent Bedard</h2>
         </div>
     </header>
 
