--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
-    <script src="https://use.fontawesome.com/573c505b44.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+
+    <!-- Custom Font -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://use.fontawesome.com/573c505b44.js"></script>
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
@@ -21,32 +26,28 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="module" src="/scripts/client.js"></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <div>tweeter</div>
-      <div id="write-tweet">Write a new tweet</div>
+      <div class="nav-left">
+        <span>tweeter</span>
+      </div>
+      <div class="nav-right">
+        <span id="write-tweet">Write a new tweet</span>
+      </div>
     </nav>
     <div id="core">
       <header>
         <div>
-            <img src="/images/profile-hex.png"> 
+          <img src="/images/profile-hex.png"> 
+          <h2 id="nameTitle">Vincent Bedard</h2>
         </div>
-        <br>
-        <div>
-            <h2 id="nameTitle">Vincent Bedard</h2>
-        </div>
-    </header>
-
+      </header>
       <!-- Page-specific (main) content here -->
       <main class="container">
-        <h2>LOREM IPSUM</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-
         <section class="new-tweet hidden">
           <h2>Compose Tweet</h2>
           <div id="error-message" class="hidden"></div>
@@ -58,13 +59,7 @@
             </div>
           </form>
         </section>
-
-        <section id="tweet-container">
-          
-
-          
-
-        </section>
+        <section id="tweet-container"></section>
         <button id="goUp"><i class="fa fa-angle-double-up" aria-hidden="true"></i>
         </button>
       </main>
